--- a/css/style.css
+++ b/css/style.css
@@ -2,33 +2,99 @@ body {
   margin: 0 auto;
 }
 
-h1 {
-  font-family: lato, sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-h2 {
-  font-family: lato, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-p {
+body {
+  margin: 0 auto;
+  background: #F7F1F1;
   font-family: open-sans, sans-serif;
-  font-weight: 400;
-  font-style: normal;
+}
+
+a {
+  text-decoration: none;
+  color: #423F38;
+  font-family: open-sans, sans-serif;
+}
+
+i {
+  color: #423F38;
+  font-size: 1.3rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "lato", sans-serif;
 }
 
 button {
   font-family: ff-uberhand-pro, sans-serif;
-  font-weight: 700;
-  font-style: normal;
 }
 
-.logo {
-  font-family: fairwater-script, sans-serif;
-  font-weight: 700;
-  font-style: normal;
+.heart__with__fill,
+.heart__without__fill {
+  color: #E28D8D;
+}
+
+header {
+  background: -webkit-gradient(linear, left top, right top, from(#B2C6BD), color-stop(30%, #B2C6BD), color-stop(70%, #F7F1F1), to(#F7F1F1));
+  background: linear-gradient(left, #B2C6BD 0%, #B2C6BD 30%, #F7F1F1 70%, #F7F1F1 100%);
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+}
+
+header .nav__list__container {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-left: 20px;
+}
+
+header .nav__list {
+  position: absolute;
+  background: -webkit-gradient(linear, left top, right top, from(#B2C6BD), color-stop(30%, #B2C6BD), color-stop(70%, #F7F1F1), to(#F7F1F1));
+  background: linear-gradient(left, #B2C6BD 0%, #B2C6BD 30%, #F7F1F1 70%, #F7F1F1 100%);
+  top: 76px;
+  left: 0px;
+  height: 100%;
+  width: 50%;
+  padding-left: 20px;
+}
+
+header .nav__list li {
+  list-style: none;
+  font-size: 1.3rem;
+}
+
+header .nav__logo {
+  margin-top: 10px;
+  max-width: 100px;
+}
+
+header .alt__nav__container {
+  -ms-flex-item-align: center;
+      align-self: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+header .alt__nav__container .basket__count {
+  background-color: #D4A591;
+  font-size: 10px;
+  font-weight: bold;
+  color: #F7F1F1;
+  border-radius: 50%;
+  text-align: center;
+  padding: 1px 1px;
+  z-index: 10;
+  position: relative;
+  left: 11px;
+  bottom: 28px;
 }
 /*# sourceMappingURL=style.css.map */
