--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,32 +2,6 @@ body {
     margin: 0 auto;
 }
 
-h1 {
-    font-family: lato, sans-serif;
-    font-weight: 700;
-    font-style: normal;
-}
-
-h2 {
-    font-family: lato, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
-p {
-    font-family: open-sans, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
-button {
-    font-family: ff-uberhand-pro, sans-serif;
-    font-weight: 700;
-    font-style: normal;
-}
-
-.logo {
-    font-family: fairwater-script, sans-serif;
-    font-weight: 700;
-    font-style: normal;
-}
+@import "partials/variables";
+@import "partials/base";
+@import "partials/nav";
