--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -16,9 +16,9 @@ $colours: (primaryred: #E28D8D,
     textcoloursecondary: #262421);
 
 $mixColour: #B2C6BD 0%,
-#B2C6BD 30%,
-transparent 70%,
-transparent 100%;
+#B2C6BD 50%,
+rgba(247, 241, 241, 0.8) 75%,
+rgba(247, 241, 241, 0.5) 100%;
 
 @function getColour($colour) {
     @return map-get($colours, $colour);
