--- a/css/style.css
+++ b/css/style.css
@@ -118,4 +118,42 @@ header .alt__nav__container .basket__count {
   background-position: top;
   background-repeat: no-repeat;
 }
+
+footer {
+  background: #E28D8D;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: auto auto 1fr;
+      grid-template-rows: auto auto 1fr;
+}
+
+footer .footer__logo__container {
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+footer .footer__logo__container .footer__logo {
+  margin-top: 20px;
+  max-width: 120px;
+  margin-left: 10px;
+}
+
+footer .footer__social__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+footer .footer__social__container .footer__social {
+  font-size: 1.5rem;
+}
+
+footer .footer__info__container {
+  -ms-grid-column-align: center;
+      justify-self: center;
+  text-align: center;
+  font-weight: 600;
+}
 /*# sourceMappingURL=style.css.map */
