--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,37 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html,
 body {
-  margin: 0 auto;
+  height: 100%;
 }
 
 body {
   margin: 0 auto;
   background: #F7F1F1;
   font-family: open-sans, sans-serif;
+  color: #423F38;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.wrapper {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+}
+
+.container {
+  max-width: 1000px;
+  padding: 0 2.4rem;
+  margin: 0 auto;
 }
 
 a {
@@ -17,6 +43,10 @@ a {
 i {
   color: #423F38;
   font-size: 1.3rem;
+}
+
+i :hover {
+  cursor: pointer;
 }
 
 h1,
@@ -31,68 +61,123 @@ button {
   font-family: ff-uberhand-pro, sans-serif;
 }
 
-.heart__with__fill,
-.heart__without__fill {
+.fa-heart {
   color: #E28D8D;
 }
 
-header {
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+}
+
+.navbar__container {
   background: -webkit-gradient(linear, left top, right top, from(#B2C6BD), color-stop(50%, #B2C6BD), color-stop(75%, rgba(247, 241, 241, 0.8)), to(rgba(247, 241, 241, 0.5)));
   background: linear-gradient(to right, #B2C6BD 0%, #B2C6BD 50%, rgba(247, 241, 241, 0.8) 75%, rgba(247, 241, 241, 0.5) 100%);
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
+  position: relative;
+  width: 100%;
 }
 
-header .nav__list__container {
+.navbar__container .hamburger__menu__input {
+  display: none;
+}
+
+.navbar__container .nav__list__container {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 10;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  margin-left: 20px;
 }
 
-header .nav__list {
-  display: none;
+.navbar__container .nav__list__container .hamburger__label {
+  display: block;
   position: absolute;
-  background: -webkit-gradient(linear, left top, right top, from(#B2C6BD), color-stop(50%, #B2C6BD), color-stop(75%, rgba(247, 241, 241, 0.8)), to(rgba(247, 241, 241, 0.5)));
-  background: linear-gradient(to right, #B2C6BD 0%, #B2C6BD 50%, rgba(247, 241, 241, 0.8) 75%, rgba(247, 241, 241, 0.5) 100%);
-  top: 76px;
-  left: 0px;
-  height: 100%;
-  width: 50%;
-  padding-left: 20px;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  padding: 35px 30px;
+  font-size: 1.6rem;
 }
 
-header .nav__list li {
+.navbar__container .nav__list__container .hamburger__label :hover {
+  cursor: pointer;
+}
+
+.navbar__container .nav__list__container .nav {
+  display: none;
+  position: relative;
+  background: -webkit-gradient(linear, left top, right top, from(#B2C6BD), color-stop(20%, #B2C6BD), color-stop(40%, rgba(178, 198, 189, 0.8)), to(rgba(178, 198, 189, 0.5)));
+  background: linear-gradient(to right, #B2C6BD 0%, #B2C6BD 20%, rgba(178, 198, 189, 0.8) 40%, rgba(178, 198, 189, 0.5) 100%);
+  height: 100vh;
+  width: 30vh;
+  padding-top: 100px;
+}
+
+.navbar__container .nav__list__container .nav .nav__list {
+  padding: 10px 0;
+}
+
+.navbar__container .nav__list__container .nav .nav__list li {
   list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 10px 20px;
   font-size: 1.3rem;
 }
 
-header .nav__logo__container {
-  -ms-grid-column-align: center;
-      justify-self: center;
+.navbar__container .nav__list__container .nav .nav__list li .basket__icon__container {
+  max-height: 23px;
 }
 
-header .nav__logo__container .nav__logo {
+.navbar__container .nav__list__container .nav .nav__list li .active {
+  text-decoration: underline;
+}
+
+.navbar__container .nav__list__container .nav .nav__list li .active .fa-heart {
+  text-decoration: none;
+}
+
+.navbar__container .nav__logo__container {
+  -ms-grid-column-align: center;
+      justify-self: center;
+  margin: 0 auto;
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+.navbar__container .nav__logo__container .nav__logo {
   -ms-grid-column-align: center;
       justify-self: center;
   margin-top: 10px;
   max-width: 100px;
 }
 
-header .alt__nav__container {
-  -ms-flex-item-align: center;
-      align-self: center;
+.navbar__container .alt__navigation {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  list-style: none;
+  padding-left: 0px;
+  margin-top: 35px;
 }
 
-header .alt__nav__container .basket__count {
+.navbar__container .basket__count,
+.navbar__container .logout__user__x {
   background-color: #D4A591;
   font-size: 10px;
   font-weight: bold;
@@ -100,23 +185,19 @@ header .alt__nav__container .basket__count {
   border-radius: 50%;
   text-align: center;
   padding: 1px 1px;
-  z-index: 10;
   position: relative;
   left: 11px;
   bottom: 28px;
+  z-index: 20;
+  width: 17px;
+  height: 17px;
+  font-family: open-sans, sans-serif;
 }
 
-.herobanner__container {
-  width: 100%;
-}
-
-.herobanner__img {
-  background-image: url("../../logo/taisiia-shestopal-8IIZAnpRX30-unsplash.jpg");
-  height: 100vh;
-  width: 100%;
-  overflow: hidden;
-  background-position: top;
-  background-repeat: no-repeat;
+.navbar__container .logout__user__x {
+  background-color: #CFD0C3;
+  color: #423F38;
+  font-size: 0.7rem;
 }
 
 footer {
@@ -125,6 +206,9 @@ footer {
   display: grid;
   -ms-grid-rows: auto auto 1fr;
       grid-template-rows: auto auto 1fr;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  margin-top: 40px;
 }
 
 footer .footer__logo__container {
@@ -155,5 +239,128 @@ footer .footer__info__container {
       justify-self: center;
   text-align: center;
   font-weight: 600;
+}
+
+.standard__cta__btn {
+  width: 300px;
+  height: 40px;
+  background-color: #423F38;
+  color: #F7F1F1;
+  border: none;
+  font-size: 1.2rem;
+}
+
+.edit__btn {
+  background-color: #CFD0C3;
+  color: #262421;
+}
+
+.herobanner__container {
+  width: 100%;
+}
+
+.herobanner__img {
+  background-image: url("../../logo/taisiia-shestopal-8IIZAnpRX30-unsplash.jpg");
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  background-position: top;
+  background-repeat: no-repeat;
+}
+
+.product__card {
+  max-width: 300px;
+  position: relative;
+}
+
+.product__card .favorite__icon__container {
+  width: 100%;
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  position: absolute;
+  top: -15px;
+  right: -15px;
+}
+
+.product__card .favorite__icon__container .favorite__button {
+  font-size: 2rem;
+}
+
+.product__card .product__image {
+  width: 100%;
+  height: 350px;
+  -o-object-position: center;
+     object-position: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.product__card .product__card__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.product__card .product__card__info .product__card__price {
+  font-size: 0.9rem;
+}
+
+.product__card .button__container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (auto)[2];
+      grid-template-rows: repeat(2, auto);
+  gap: 10px;
+}
+
+.featured__container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto;
+      grid-template-columns: auto;
+  gap: 30px;
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.pagination__container {
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.pagination__container .pages__container p {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.pagination__container .page__arrow {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  border: 1px solid #423F38;
+  border-radius: 50%;
+  padding: 4px 10px;
+  color: #423F38;
+  background-color: #F7F1F1;
+  font-size: 1.5rem;
 }
 /*# sourceMappingURL=style.css.map */
