--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -2,6 +2,8 @@ footer {
     background: getColour(primaryred);
     display: grid;
     grid-template-rows: auto auto 1fr;
+    flex-shrink: 0;
+    margin-top: 40px;
 
     .footer__logo__container {
         justify-self: center;
