--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,9 @@
-body {
-    margin: 0 auto;
-}
-
 @import "partials/variables";
 @import "partials/base";
 @import "partials/nav";
-@import "partials/herobanner";
 @import "partials/footer";
+@import "partials/buttons";
+@import "partials/herobanner";
+@import "partials/productCard";
+@import "partials/index";
+@import "partials/pagination";
