--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -10,7 +10,6 @@ body {
 body {
     margin: 0 auto;
     background: getColour(backgroundwhite);
-    font-family: $font-primary;
     color: getColour(textcolourprimary);
     display: flex;
     flex-direction: column;
@@ -26,10 +25,13 @@ body {
     margin: 0 auto;
 }
 
+.content__wrapper {
+    margin-top: 130px;
+}
+
 a {
     text-decoration: none;
     color: getColour(textcolourprimary);
-    font-family: $font-primary;
 }
 
 i {
@@ -39,18 +41,6 @@ i {
 
 i :hover {
     cursor: pointer;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-    font-family: $font-heading;
-}
-
-button {
-    font-family: $font-button;
 }
 
 .fa-heart {
