--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,12 @@
 @import "partials/variables";
 @import "partials/base";
+@import "partials/typography";
 @import "partials/nav";
 @import "partials/footer";
 @import "partials/buttons";
 @import "partials/herobanner";
+@import "partials/productsContainer";
 @import "partials/productCard";
-@import "partials/index";
 @import "partials/pagination";
+@import "partials/input";
+@import "partials/about";
