--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,3 +10,5 @@
 @import "partials/pagination";
 @import "partials/input";
 @import "partials/about";
+@import "partials/details";
+@import "partials/basket";
