--- a/css/style.css
+++ b/css/style.css
@@ -477,4 +477,158 @@ input:focus {
 .about__social:hover h5 {
   color: #D4A591;
 }
+
+.details__img__fav__container {
+  position: relative;
+}
+
+.details__img__fav__container .favorite__icon__container {
+  width: 100%;
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  position: absolute;
+  top: -15px;
+  right: -15px;
+}
+
+.details__img__fav__container .favorite__icon__container .favorite__button {
+  font-size: 2rem;
+}
+
+.product__details__image {
+  width: 100%;
+  height: 350px;
+  -o-object-position: center;
+     object-position: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.heading__clearbtn__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.heading__clearbtn__container .clearbtn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.heading__clearbtn__container .clearbtn p {
+  margin-right: 10px;
+}
+
+.basket__grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  gap: 30px;
+}
+
+.basket__card {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto 1fr;
+      grid-template-columns: auto 1fr;
+  gap: 20px;
+}
+
+.product__trash {
+  font-size: 1rem;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-column-align: end;
+      justify-self: end;
+}
+
+.basket__info__container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto auto;
+      grid-template-columns: auto auto;
+  row-gap: 10px;
+}
+
+.basket__info__container h5 {
+  margin: 0px;
+}
+
+.basket__info__container .counter__container {
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-self: center;
+}
+
+.basket__info__container p {
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  grid-column-end: 3;
+  font-size: 0.7rem;
+  -ms-grid-column-align: end;
+      justify-self: end;
+  margin: 0px;
+}
+
+.counter__icon {
+  border: 2px solid #D4A591;
+  font-size: 0.7rem;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  padding: 5px;
+}
+
+.count__container {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  padding: 0px 10px;
+}
+
+.basket__img {
+  width: 100px;
+  height: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+hr {
+  margin-top: 30px;
+  border: 1px solid #D4A591;
+}
+
+.total__price__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.total__price__container p {
+  font-size: 0.9rem;
+}
 /*# sourceMappingURL=style.css.map */
