--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,7 @@ a {
   -ms-grid-column: 2;
       grid-column-start: 2;
   grid-column-end: 3;
+  z-index: 200;
 }
 
 .navbar__container .nav__logo__container .nav__logo {
@@ -248,6 +249,10 @@ footer .footer__info__container {
       justify-self: center;
   text-align: center;
   font-weight: 600;
+}
+
+button:hover {
+  cursor: pointer;
 }
 
 .standard__cta__btn {
@@ -616,7 +621,7 @@ hr {
   border: 1px solid #D4A591;
 }
 
-.total__price__container {
+.sum__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -628,7 +633,34 @@ hr {
           align-items: center;
 }
 
-.total__price__container p {
+.sum__container p {
   font-size: 0.9rem;
+}
+
+.basket__btn__container {
+  display: -ms-grid;
+  display: grid;
+  gap: 15px;
+}
+
+.login__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.login__form .input__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 20px;
 }
 /*# sourceMappingURL=style.css.map */
