--- a/sass/partials/_input.scss
+++ b/sass/partials/_input.scss
@@ -9,7 +9,8 @@
     }
 }
 
-input {
+input,
+textarea {
     border: 3px solid getColour(highlightorange);
     height: 40px;
     font-size: 0.9rem;
