--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,4 +12,4 @@
 @import "partials/about";
 @import "partials/details";
 @import "partials/basket";
-@import "partials/login";
+@import "partials/forms";
