--- a/css/style.css
+++ b/css/style.css
@@ -681,22 +681,19 @@ hr {
   margin-top: 2px;
 }
 
-.featured__icon__contaienr {
+.featured__icon__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 40px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 30px 0px;
+  gap: 20px;
+  margin: 10px 0px 30px 0px;
 }
 
-.featured__icon__contaienr .featured__checkbox {
+.featured__icon__container .featured__checkbox {
   display: none;
 }
 
-.featured__icon__contaienr .featured__icon {
+.featured__icon__container .featured__icon {
   font-size: 2.4rem;
 }
 /*# sourceMappingURL=style.css.map */
