--- a/sass/partials/_forms.scss
+++ b/sass/partials/_forms.scss
@@ -23,11 +23,10 @@
     }
 }
 
-.featured__icon__contaienr {
+.featured__icon__container {
     display: flex;
-    gap: 40px;
-    justify-content: center;
-    margin: 30px 0px;
+    gap: 20px;
+    margin: 10px 0px 30px 0px;
 
     .featured__checkbox {
         display: none;
